@@ -21,12 +21,14 @@ For 5.1
     TODO: Validate UTIs and app bundle identifiers properly
     TODO: Treat drop into STPathTextField like any other drop, don't let editor swallow it
     TODO: File watching still broken for script path
-    TODO: Make the type lists in drop settings editable like those in Args controller
-    TODO: [img setTemplate] option for Status Item icon
+
 
     http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
     http://stackoverflow.com/questions/1276029/non-blocking-stdio
 
+    TODO: Make the type lists in drop settings editable like those in Args controller
+
+    * New template processing option for Status Item icon
     * Build script now generates sparkle hash
     * More robust command line tool version checking
     * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
